[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "caesar_toshydev"
version = "0.0.2"
authors = [
  { name="Anton Roters", email="antonroters@hotmail.com" },
]
description = "A Caesar cipher ROT13 tool"
readme = "README.md"
requires-python = ">=3.8"
scripts = { caesar = "bin:caesar" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Environment :: Console",
    "Topic :: Security :: Cryptography",
]

[project.urls]
"Homepage" = "https://github.com/toshydev/caesar"
"Bug Tracker" = "https://github.com/toshydev/caesar/issues"